--- a/app/views/login.twig
+++ b/app/views/login.twig
@@ -8,21 +8,23 @@
     <body>
         <div class='row'>
             <div class='cuerpo card col l4 m6 s12'>
-                <div class="input-field  s6">
-                    <input placeholder="Usuario" id="usuario" type="text" class="validate">
-                    <label for="usuario">Usuario</label>
+                <h5 class="card-title">Inicio de sesión</h5>
+                <div class='card-content'>
+                    <div class="input-field  s6">
+                        <input placeholder="Usuario" id="usuario" type="text" class="validate">
+                        <label for="usuario">Usuario</label>
+                    </div>
+                    <div class="input-field s6">
+                        <input placeholder="Contraseña" id="password" type="password" class="validate">
+                        <label for="password">Contraseña</label>
+                    </div>
                 </div>
-                <div class="input-field s6">
-                    <input placeholder="Contraseña" id="password" type="password" class="validate">
-                    <label for="password">Contraseña</label>
-                </div>
-                <div>
-                    <button class='btn btn-large '>Ingresar</button>
+                <div class='card-action'>
+                    <a href="#">Ingresar</a>
                 </div>
             </div>
-        </div>
-        <footer>
-            <script src="assets/vendors/materialize/js/materialize.min.js"></script>
-        </footer>
+            <footer>
+                <script src="assets/vendors/materialize/js/materialize.min.js"></script>
+            </footer>
     </body>
 </html>
